# AeroFramework

./: README.md  install_framework.bat  pyproject.toml
aeroframework/: __init__.py
aeroframework/flow5/: bridge.py  bridge_functions.py  geometry.py  wing_params.py
aeroframework/flow5/templates/: template_analysis.xml  template_case.xml  template_plane.xml
examples/matlab/flow5/: geometry.m  main_geometry.m  main_simulation.m  plot_wing_3d.m  simulation.m
examples/matlab/flow5/dataset_polars/: opt6.0.plr
examples/python/flow5/: geometry.py  main_geometry.py  main_simulation.py  plot.py  simulation.py
examples/python/flow5/dataset_polars/: Joukovsky 0009.plr
matlab/+flow5/: bridge.m  bridge_functions.m  geometry.m  wing_params.m
